--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 ## Packages
 fastapi[standard] ==  0.104.1
 pydantic == 1.10.8
-
+uvicorn  == 0.24.0.post1
 ## Local machine for reference
 # Package                       Version
 # ----------------------------- ------------
