--- a/requirements.txt
+++ b/requirements.txt
@@ -238,7 +238,7 @@ uvicorn  == 0.24.0.post1
 # prompt-toolkit                3.0.36
 # Protego                       0.1.16
 # psutil                        5.9.0
-# psycopg2                      2.9.3
+psycopg2                      2.9.3
 # ptyprocess                    0.7.0
 # pure-eval                     0.2.2
 # py-cpuinfo                    8.0.0
