--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@
 fastapi[standard] ==  0.104.1
 pydantic == 1.10.8
 uvicorn  == 0.24.0.post1
+psycopg2 == 2.9.3
 ## Local machine for reference
 # Package                       Version
 # ----------------------------- ------------
@@ -238,7 +239,7 @@ uvicorn  == 0.24.0.post1
 # prompt-toolkit                3.0.36
 # Protego                       0.1.16
 # psutil                        5.9.0
-psycopg2                      2.9.3
+# psycopg2                      2.9.3
 # ptyprocess                    0.7.0
 # pure-eval                     0.2.2
 # py-cpuinfo                    8.0.0
