--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -9,6 +9,7 @@
 fastapi[standard] ==  0.104.1
 pydantic == 1.10.8
 uvicorn  == 0.24.0.post1
+psycopg2 == 2.9.3
 ## Local machine for reference
 # Package                       Version
 # ----------------------------- ------------
